--- a/portfolio-details-jenkins.html
+++ b/portfolio-details-jenkins.html
@@ -39,7 +39,9 @@
           <div class="col-lg-8">
             <h2 class="portfolio-title">CI/CD Jenkins Pipeline</h2>
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/jenkins.mp4" class="img-fluid" alt="">
+              <video width="100%" autoplay loop>
+                <source src="assets/img/portfolio/jenkins.mp4" type="video/mp4">
+              </video>
             </div>
           </div>
 
@@ -69,7 +71,8 @@
               <li>• Zip Artifacts</li>
               <li>• Deliver (Run the Docker Image)</li>
             </ul>
-            This project demonstrates the following skills:
+            
+            <p>This project demonstrates the following skills:</p>
             <ul>
               <li>• Installing and configuring on-premise Jenkins and GitLab</li>
               <li>• Shell scripting and Python</li>
