--- a/pengu/details.html
+++ b/pengu/details.html
@@ -32,8 +32,8 @@ html *
 <p>Alias for <i>nowplaying</i></p>
 
 <h3>play</h3>
-<p>Plays music via Youtube links, Spotify, and direct search. Supports Spotify tracks, albums, and public playlists.</p>
-<p><i>Does NOT play directly from Spotify. It grabs song name and artist and searches on Youtube.</i></p>
+<p>Plays music via Youtube, Spotify, Soundcloud links, and direct search. Supports Spotify/Soundcloud tracks, Spotify albums, and Spotify/Youtube public playlists.</p>
+<p><i>Spotify plays music from Youtube. Soundcloud downloads the music locally into PENGU.</i></p>
 
 <h3>p</h3>
 <p>Alias for <i>play</i></p>
@@ -70,6 +70,9 @@ html *
 <p>===================</p>
 <h3>connect</h3>
 <p>PENGU waddles to your voice channel</p>
+
+<h3>join</h3>
+<p>Alias for <i>connect</i></p>
 
 <h3>disconnect</h3>
 <p>Throw him out.</p>
@@ -162,7 +165,7 @@ html *
 </ul>
 
 <h3>vine</h3>
-<p>Plays sound effects from Vine</p>
+<p>Plays sound effects from Vine/Tiktok</p>
 <ul>
     <li>
         boom
@@ -170,7 +173,16 @@ html *
     <li>
         bruh
     </li>
+    <li>
+        auugh
+    </li>
+    <li>
+        hellnah
+    </li>
 </ul>
+
+<h3>tiktok</h3>
+<p>Alias for <i>vine</i></p>
 
 
 <h3>warzone</h3>
