--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -11,7 +11,57 @@
 <h1>Prefix: `</h1>
 
 <p>===================</p>
-<h2>Patch 1.3 - Feb 25, 2021</h2>
+<h2>Patch 2.0 - April 24, 2022</h2>
+<p>===================</p>
+<ul>
+    <li>
+        PENGU now plays Soundcloud links
+        <ul>
+            <li>
+                <i>Only direct Soundcloud links for now. No playlists/albums just yet.</i>
+            </li>
+            <li>
+                <i>Example: `play https://soundcloud.com/jackharlow/jack-harlow-first-class?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing</i>
+            </li>
+        </ul>
+    </li>
+    <li>
+        Youtube public/unlisted playlists now supported
+        <ul>
+            <li>
+                <i>Will take some time to process. Approx 0.6 seconds per song/video in playlist</i>
+            </li>
+        </ul>
+    </li>
+    <li>
+        Added 2 new sound effects from TikTok
+        <ul>
+            <li>
+                tiktok auugh
+            </li>
+            <li>
+                tiktok hellnah
+            </li>
+            <li>
+                <i>Can use vine command as well. Example: "vine auugh"</i>
+            </li>
+        </ul>
+    </li>
+    <li>
+        Added a new sound effect from Discord
+        <ul>
+            <li>
+                disc ping
+            </li>
+        </ul>
+    </li>
+    <li>
+        Added <i>join</i> alias for <i>connect</i> command
+    </li>
+</ul>
+
+<p>===================</p>
+<h2>Patch 1.3 - Feb 25, 2022</h2>
 <p>===================</p>
 <ul>
     <li>
@@ -54,7 +104,7 @@
 
 
 <p>===================</p>
-<h2>Patch 1.2.2 - Feb 11, 2021</h2>
+<h2>Patch 1.2.2 - Feb 11, 2022</h2>
 <p>===================</p>
 <ul>
     <li>
@@ -69,7 +119,7 @@
 
 
 <p>===================</p>
-<h2>Patch 1.2.1 - Jan 28, 2021</h2>
+<h2>Patch 1.2.1 - Jan 28, 2022</h2>
 <p>===================</p>
 <ul>
     <li>
@@ -81,7 +131,7 @@
 </ul>
 
 <p>===================</p>
-<h2>Patch 1.2 - Jan 27, 2021</h2>
+<h2>Patch 1.2 - Jan 27, 2022</h2>
 <p>===================</p>
 <ul>
     <li>
@@ -105,7 +155,7 @@
 </ul>
 
 <p>===================</p>
-<h2>Patch 1.1.2 - Jan 23, 2021</h2>
+<h2>Patch 1.1.2 - Jan 23, 2022</h2>
 <p>===================</p>
 <ul>
     <li>
@@ -123,7 +173,7 @@
 </ul>
 
 <p>===================</p>
-<h2>Patch 1.1.1 - Jan 20, 2021</h2>
+<h2>Patch 1.1.1 - Jan 20, 2022</h2>
 <p>===================</p>
 <ul>
     <li>
@@ -141,7 +191,7 @@
 
 
 <p>===================</p>
-<h2>Patch 1.1 - Jan 20, 2021</h2>
+<h2>Patch 1.1 - Jan 20, 2022</h2>
 <p>===================</p>
 <ul>
     <li>
@@ -176,7 +226,7 @@
 
 
 <p>===================</p>
-<h2>Patch 1.0 - Jan 19, 2021</h2>
+<h2>Patch 1.0 - Jan 19, 2022</h2>
 <p>===================</p>
 <ul>
     <li>
