Updated resume and title

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <h1><a href="index.html">Jaguar Perlas.</a></h1>
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       
-      <!-- <h2><span>Computer Information Technology</span> Student from BCIT.</h2> -->
-      <h2><span class="typed" data-typed-items="CIT Student from BCIT., System Administrator., Developer., Aspiring Ethical Hacker."></span></h2>
+      <!-- <h2><span>Computer Information Technology</span> Gradute from BCIT.</h2> -->
+      <h2><span class="typed" data-typed-items="CIT Gradute from BCIT., System Administrator., Developer., Aspiring Ethical Hacker."></span></h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
