--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -11,6 +11,43 @@
 <h1>Prefix: `</h1>
 
 <p>===================</p>
+<h2>Patch 2.1 - May 17, 2022</h2>
+<p>===================</p>
+<ul>
+    <li>
+        Fixed a bug where PENGU will throw an error when a <i>play</i> command is issued while PENGU is searching
+    </li>
+    <li>
+        Reformatted all redundant alias commands
+    </li>
+    <li>
+        Added new SFX
+        <ul>
+            <li>
+                <i>valorant zedd</i>
+            </li>
+            <li>
+                <i>valorant plant</i>
+            </li>
+            <li>
+                <i>valorant defuse</i>
+            </li>
+        </ul>
+    </li>
+    <li>
+        Added a new aliases
+        <ul>
+            <li>
+                <i>fs</i> || Alias for <i>skip</i>
+            </li>
+            <li>
+                <i>v</i> || Alias for <i>valorant</i>
+            </li>
+        </ul>
+    </li>
+</ul>
+
+<p>===================</p>
 <h2>Patch 2.0 - April 24, 2022</h2>
 <p>===================</p>
 <ul>
@@ -82,7 +119,7 @@
                 <i>nowplaying</i>
             </li>
             <li>
-                <i>np</i> || Alias
+                <i>np</i> || Alias for <i>nowplaying</i>
             </li>
         </ul>
     </li>
@@ -90,13 +127,13 @@
         Added aliases to common commands
         <ul>
             <li>
-                <i>q</i> || Alias for queue
+                <i>q</i> || Alias for <i>queue</i>
             </li>
             <li>
-                <i>leave</i> || Alias for disconnect
+                <i>leave</i> || Alias for <i>disconnect</i>
             </li>
             <li>
-                <i>s</i> || Alias for skip
+                <i>s</i> || Alias for <i>skip</i>
             </li>
         </ul>
     </li>
