--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -11,6 +11,23 @@
 <h1>Prefix: `</h1>
 
 <p>===================</p>
+<h2>Patch 2.1.1 - May 20, 2022</h2>
+<p>===================</p>
+<ul>
+    <li>
+        Changed order of execution to prevent bug that affects all servers from playing music
+    </li>
+    <li>
+        Added a new alias
+        <ul>
+            <li>
+                <i>next</i> || Alias for <i>skip</i>
+            </li>
+        </ul>
+    </li>
+</ul>
+
+<p>===================</p>
 <h2>Patch 2.1 - May 17, 2022</h2>
 <p>===================</p>
 <ul>
@@ -35,7 +52,7 @@
         </ul>
     </li>
     <li>
-        Added a new aliases
+        Added new aliases
         <ul>
             <li>
                 <i>fs</i> || Alias for <i>skip</i>
