--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -18,6 +18,9 @@
         Changed order of execution to prevent bug that affects all servers from playing music
     </li>
     <li>
+        Commands are now case insensitive
+    </li>
+    <li>
         Added a new alias
         <ul>
             <li>
