--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -11,6 +11,29 @@
 <h1>Prefix: `</h1>
 
 <p>===================</p>
+<h2>Patch 2.1.2 - June 11, 2022</h2>
+<p>===================</p>
+<ul>
+    <li>
+        PENGU will now appropriately change array values when something goes wrong
+    </li>
+    <li> 
+        Fixed a typo
+    </li>
+    <li>
+        Added datetime.datetime.now() to all print statements for better debugging
+    </li>
+    <li>
+        Added a new command
+        <ul>
+            <li>
+                <i>fixme</i> || Reset Discord server array values to default/blank (including queue)
+            </li>
+        </ul>
+    </li>
+</ul>
+
+<p>===================</p>
 <h2>Patch 2.1.1 - May 20, 2022</h2>
 <p>===================</p>
 <ul>
