--- a/pengu/details.html
+++ b/pengu/details.html
@@ -77,6 +77,9 @@ html *
 <h3>disconnect</h3>
 <p>Throw him out.</p>
 
+<h3>fixme</h3>
+<p>Reset PENGU to default values</p>
+
 <h3>leave</h3>
 <p>Alias for <i>disconnect</i></p>
 
