--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -11,6 +11,15 @@
 <h1>Prefix: `</h1>
 
 <p>===================</p>
+<h2>Patch 2.2 - July 25, 2022</h2>
+<p>===================</p>
+<ul>
+    <li>
+        <i>playnow</i> now supports Spotify playlists/albums and Youtube playlists
+    </li>
+</ul>
+
+<p>===================</p>
 <h2>Patch 2.1.2 - June 11, 2022</h2>
 <p>===================</p>
 <ul>
