--- a/pengu/details.html
+++ b/pengu/details.html
@@ -12,6 +12,21 @@ html *
 <h2><a href="https://jaguarperlas.com/pengu/patch_notes.html">Patch Notes</a></h2>
 
 <h2>Enjoying PENGU? Consider making a <a href="https://www.paypal.com/donate/?hosted_button_id=FLS45QV8QPD72"> donation!</a></h2>
+
+<p>===================</p>
+<h2>MOST COMMON</h2>
+<p>===================</p>
+<p>play</p>
+<p>stop</p>
+<p>queue</p>
+<p>skip</p>
+<p>clear</p>
+<p>loop</p>
+<p>loopoff</p>
+<p>playnow</p>
+<p>fixme</p>
+<p>leave</p>
+
 <p>===================</p>
 <h2>Music Commands</h2>
 <p>===================</p>
@@ -85,8 +100,11 @@ html *
 <h3>debug</h3>
 <p>Tells the secrets of PENGU</p>
 
-<h3>help [command]</i></h3>
+<h3>help [command]</h3>
 <p>Displays all commands. If passed with a listed command, shows details.</p>
+
+<h3>uptime</h3>
+<p>Shows how long PENGU has been running since last update.</p>
 
 <p>===================</p>
 <h2>Sound effects</h2>
