--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -11,6 +11,22 @@
 <h1>Prefix: `</h1>
 
 <p>===================</p>
+<h2>Patch 2.2.1 - September 25, 2022</h2>
+<p>===================</p>
+Since PENGU has been super stable lately and I'm running out of ideas to add, I haven't been putting many updates.
+There are some areas that can be improved on, but for the most part, PENGU has been functioning well.
+<ul>
+    <li>
+        Added a new command
+        <ul>
+            <li>
+                <i>uptime</i> || Shows how long PENGU has been running since last restart
+            </li>
+        </ul>
+    </li>
+</ul>
+
+<p>===================</p>
 <h2>Patch 2.2 - July 25, 2022</h2>
 <p>===================</p>
 <ul>
