--- a/pengu/details.html
+++ b/pengu/details.html
@@ -37,6 +37,9 @@ html *
 <h3>loop</h3>
 <p>Loops the currently playing song</p>
 
+<h3>loopon</h3>
+<p>Alias for <i>loop</i></p>
+
 <h3>loopoff</h3>
 <p>Turns off looping</p>
 
@@ -102,6 +105,9 @@ html *
 
 <h3>help [command]</h3>
 <p>Displays all commands. If passed with a listed command, shows details.</p>
+
+<h3>reset</h3>
+<p>Alias for <i>fixme</i></p>
 
 <h3>uptime</h3>
 <p>Shows how long PENGU has been running since last update.</p>
