--- a/pengu/patch_notes.html
+++ b/pengu/patch_notes.html
@@ -11,6 +11,29 @@
 <h1>Prefix: `</h1>
 
 <p>===================</p>
+<h2>Patch 2.2.2 - October 29, 2022</h2>
+<p>===================</p>
+<ul>
+    <li>
+        <i>fixme</i> Command will now disconnect and reconnect PENGU.
+    </li>
+    <li>
+        Error messages are now straight forward. Users should be able to know why PENGU bugged out.
+    </li>
+    <li>
+        Added new aliases
+        <ul>
+            <li>
+                <i>loopon</i> || Alias for <i>loop</i>
+            </li>
+            <li>
+                <i>reset</i> || Alias for <i>fixme</i>
+            </li>
+        </ul>
+    </li>
+</ul>
+
+<p>===================</p>
 <h2>Patch 2.2.1 - September 25, 2022</h2>
 <p>===================</p>
 Since PENGU has been super stable lately and I'm running out of ideas to add, I haven't been putting many updates.
