--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
 </head>
 <!--
-  inspect element is quite a handy tool.
 
-  This website was last updated April 8, 2022. About to graduate soon!
+  This website was last updated March 7, 2023. 
+  Just got my first penetration testing certificate. Gunning for OSCP!
   
 -->
 <body>
