--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 </head>
 <!--
 
-  This website was last updated March 7, 2023. 
-  Just got my first penetration testing certificate. Gunning for OSCP!
+  This website was last updated May 23, 2023. 
+  Now OSCP certified. Looking for a new job.
   
 -->
 <body>
@@ -41,7 +41,7 @@
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       
       <!-- <h2><span>Computer Information Technology</span> Gradute from BCIT.</h2> -->
-      <h2><span class="typed" data-typed-items="CIT Gradute from BCIT., Ethical Hacker., Developer."></span></h2>
+      <h2><span class="typed" data-typed-items="Ethical Hacker., Penetration Tester., CIT Gradute from BCIT."></span></h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -61,6 +61,7 @@
       <div class="cert-icons">
         <a href="https://www.credly.com/badges/228bf56d-d0d1-4041-871b-64645655f2a0"><img src="ccna_sm.jpg"></a>
         <a href="https://www.credly.com/badges/6586901e-0603-49f9-b643-de76370dbabf"><img src="HTB_CPTS.png"></a>
+        <a href="https://www.credential.net/70ffef30-6d10-4d81-aa90-530313fb536e"><img src="oscp.png"></a>
       </div>
 
       
@@ -78,7 +79,7 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <p><a href="https://drive.google.com/file/d/1E4z1NsqkOIC9a2_EDhffJWn6DQan2Bll/view?usp=sharing"><u>Download PDF</u></a></p>
+        <p><a href="https://drive.google.com/file/d/1TGAH6H7R9DXLaVh4uUSvQ3uDYZcVfOe_/view?usp=sharing"><u>Download PDF</u></a></p>
       </div>
 
       <!-- <embed src="resume.pdf" type="application/pdf" style="min-height:100vh;width:100%"> -->
