--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       
       <!-- <h2><span>Computer Information Technology</span> Gradute from BCIT.</h2> -->
-      <h2><span class="typed" data-typed-items="Ethical Hacker., Penetration Tester., CIT Gradute from BCIT."></span></h2>
+      <h2><span class="typed" data-typed-items="Ethical Hacker., Penetration Tester., CIT Graduate from BCIT."></span></h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
