--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <p><a href="https://drive.google.com/file/d/1TGAH6H7R9DXLaVh4uUSvQ3uDYZcVfOe_/view?usp=sharing"><u>Download PDF</u></a></p>
+        <p><a href="https://drive.google.com/file/d/1Jkupjcb-eXDI2A4bcV81bacws8USBEbU/view?usp=drive_link"><u>Download PDF</u></a></p>
       </div>
 
       <!-- <embed src="resume.pdf" type="application/pdf" style="min-height:100vh;width:100%"> -->
