--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <a href="https://www.credly.com/badges/228bf56d-d0d1-4041-871b-64645655f2a0"><img src="ccna_sm.jpg"></a>
         <a href="https://www.credly.com/badges/6586901e-0603-49f9-b643-de76370dbabf"><img src="HTB_CPTS.png"></a>
         <a href="https://www.credential.net/70ffef30-6d10-4d81-aa90-530313fb536e"><img src="oscp.png"></a>
+        <a href="https://www.credential.net/195baba7-9060-471c-8035-accba1286e34"><img src="oswp.png"></a>
       </div>
 
       
