--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <a href="https://www.credly.com/badges/6586901e-0603-49f9-b643-de76370dbabf"><img src="HTB_CPTS.png"></a>
         <a href="https://www.credential.net/70ffef30-6d10-4d81-aa90-530313fb536e"><img src="oscp.png"></a>
         <a href="https://www.credential.net/195baba7-9060-471c-8035-accba1286e34"><img src="oswp.png"></a>
+        <a href="https://www.credly.com/badges/99caa9af-2043-4e9e-bb4b-941a08a1bb4e/public_url"><img src="sec+.png"></a>
       </div>
 
       
@@ -80,7 +81,7 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <p><a href="https://drive.google.com/file/d/1OYAET0KSwyvmzJ0_-w6lYtS0FXLQhKD1/view?usp=sharing"><u>Download PDF</u></a></p>
+        <p><a href="https://drive.google.com/file/d/1pBkRp63h_Vd4U4S2SvPF946jzMUVjYu2/view?usp=drive_link"><u>Download PDF</u></a></p>
       </div>
 
       <!-- <embed src="resume.pdf" type="application/pdf" style="min-height:100vh;width:100%"> -->
