--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <a href="https://www.credential.net/70ffef30-6d10-4d81-aa90-530313fb536e"><img src="oscp.png"></a>
         <a href="https://www.credential.net/195baba7-9060-471c-8035-accba1286e34"><img src="oswp.png"></a>
         <a href="https://www.credly.com/badges/99caa9af-2043-4e9e-bb4b-941a08a1bb4e/public_url"><img src="sec+.png"></a>
+        <a href="https://aspen.eccouncil.org/Verify"><img src="ceh.png"></a>
       </div>
 
       
