Page routing on lame.html

--- a/hack/hacks/lame.html
+++ b/hack/hacks/lame.html
@@ -115,7 +115,7 @@
         <div class="center-topnav">
             <a href=/index.html class="name">Jaguar Perlas</a>
             <a class="active" href="/hack/hacks/index.html">Hacks</a>
-            <a href="/hack/about-me.html">About me</a>
+            <a href="/hack/about.html">About me</a>
             <a href="/hack/index.html">Home</a>
         </div>
     </div>
