--- a/hack/hacks/index.html
+++ b/hack/hacks/index.html
@@ -105,8 +105,12 @@
 <body>
     <div class="content">
         <div class="cell">
+            <a href="jerry.html"><img src="/hack/images/jerry.png"></a>
+            <div class="text">[Easy] Jerry</div>
+        </div>
+        <div class="cell">
             <a href="lame.html"><img src="/hack/images/lame.png"></a>
-            <div class=text>[Easy] Lame </div>
+            <div class="text">[Easy] Lame </div>
         </div>
         <div class="cell"></div>
         <div class="cell"></div>
