Progress on index.html; Add colouring.

--- a/hack/hacks/jerry.html
+++ b/hack/hacks/jerry.html
@@ -108,6 +108,14 @@
         width: 80%
     }
 
+    h2 {
+        color:#0077ff
+    }
+
+    h3 {
+        color:#99c9ff
+    }
+
 </style>
 
 <head>
@@ -124,7 +132,7 @@
 <body>
     <div class="content">
 
-        <h1>[Easy] Lame</h1>
+        <h1>[Easy] Jerry</h1>
         <img class="box-icon" src="../images/jerry.png"></img>
         <p><i>Compromised on September 6, 2022</br>Written on January 21, 2024</i></p>
         <p>
