--- a/hack/hacks/lame.html
+++ b/hack/hacks/lame.html
@@ -108,6 +108,14 @@
         width: 80%
     }
 
+    h2 {
+        color:#0077ff
+    }
+
+    h3 {
+        color:#99c9ff
+    }
+
 </style>
 
 <head>
