--- a/hack/about.html
+++ b/hack/about.html
@@ -61,6 +61,10 @@
         padding-top: 50px;
     }
 
+    h1 {
+        color:#0077ff
+    }
+
 
 </style>
 
@@ -80,7 +84,7 @@
     <div class="content">
         <h1>whoami</h1>
         <p>
-            Hello world. Dedicated and passionate cybersecurity specialist with a heavy focus in offensive security. Currently doing Quality Assurance at 
+            Dedicated and passionate cybersecurity specialist with a heavy focus in offensive security. Currently doing Quality Assurance at 
             Fortinet for mobile platforms. Hacking stuff and learning how to hack stuff for fun and upskilling.
         </p>
         <p>
@@ -112,7 +116,7 @@
             place for me to properly document my notes and journal about my cybersecurity journey.
         </p>
         <p>
-            I hope you enjoy your stay. Feel free to contact me about anything. Refer to my <a href="https://jaguarperlas.com">main page</a> for my contact details (Linkedin)
+            I hope you enjoy your stay. Feel free to contact me about anything. Refer to my <a href="https://jaguarperlas.com">main page</a> for my contact details (Linkedin).
         </p>
     </div>
 </body>
