--- a/hack/index.html
+++ b/hack/index.html
@@ -61,6 +61,10 @@
         padding-top: 50px;
     }
 
+    h1 {
+        color:#0077ff
+    }
+
 
 </style>
 
@@ -77,9 +81,10 @@
 
 <body>
     <div class="content">
-        <p>
-            Under construction.
-        </p>
+        <h1>Hello world.</h1>
+        <p>A collection of write-ups, notes, blogs, and whatever cybersecurity stuff I encounter or learn down the road.</p>
+        <h2>Recent Posts</h2>
+        <p>Home page under construction.</p>
     </div>
 </body>
 
