pre {overflow: auto;}

--- a/hack/hacks/jerry.html
+++ b/hack/hacks/jerry.html
@@ -97,6 +97,10 @@
         width: 20%;
     }
 
+    pre {
+        overflow: auto;
+    }
+
     pre code {
         background-color: #000;
         border: 1px solid #999;
