--- a/hack/hacks/blue.html
+++ b/hack/hacks/blue.html
@@ -145,9 +145,7 @@
             targeting the SMBv1 protocol. This exploit, before it was reported to Microsoft, was used for antiterrorism and counterintelligence by the NSA
             for years. Unfortunately, when the NSA informed Microsoft about this exploit, the exploit was leaked. Hackers took advantage of this and performed
             devastating large attacks.</br>This is one of the easiest machines on HackTheBox as the exploit is publicly available and easy. 
-            The first blood for root only took two minutes.
-        </p>
-
+            The first blood for root only took two minutes.</p>
         <h2>Enumeration</h2>
         <h3>Nmap</h3>
         <p>Let's start with an Nmap scan.</p>
