--- a/hack/hacks/index.html
+++ b/hack/hacks/index.html
@@ -105,6 +105,10 @@
 <body>
     <div class="content">
         <div class="cell">
+            <a href="photobomb.html"><img src="/hack/images/photobomb.png"></a>
+            <div class="text">[Easy] Photobomb</div>
+        </div>
+        <div class="cell">
             <a href="blue.html"><img src="/hack/images/blue.png"></a>
             <div class="text">[Easy] Blue</div>
         </div>
