--- a/hack/hacks/precious.html
+++ b/hack/hacks/precious.html
@@ -186,7 +186,7 @@
         <img src="../images/precious9.png">
         <p>Unfortunately, this doesn't work.</p>
         <p>I decided to do some more enumeration. The web application's functionality actually downloads a PDF file. Maybe we can find
-            what software the web application is using to create it's PDFs. I downloaded a PDF and used exiftool to look into the PDF's metadata.
+            what software the web application is using to create its PDFs. I downloaded a PDF and used exiftool to look into the PDF's metadata.
             It looks like the web application is using pdfkit v0.8.6.</p>
         <pre><code>cd Downloads</br>exiftool 9fb2drjc77s6coj55fr3lu1hk70vpnhl.pdf</code></pre>
         <img src="../images/precious10.png">
