--- a/hack/hacks/busqueda.html
+++ b/hack/hacks/busqueda.html
@@ -166,7 +166,7 @@
         <p>Now we're able to browse the website.</p>
         <img src="../images/busqueda6.png">
         <p>Tinkering with the website, the main feature seems to be automatically crafting a search URL to automatically redirect us to our desired search engine and keywords.</p>
-        <p>If we select Google as our search engine, and search for test, we are resulted with a URL that directs us to Google with the search results.</p>
+        <p>If we select Google as our search engine and search for test, we are resulted with a URL that directs us to Google with the search results.</p>
         <img src="../images/busqueda7.png">
         <p>This seems to be a command injection vulnerability. I quickly test by inputting a semi colon.</p>
         <pre><code>'test123</code></pre>
