--- a/hack/hacks/index.html
+++ b/hack/hacks/index.html
@@ -105,6 +105,10 @@
 <body>
     <div class="content">
         <div class="cell">
+            <a href="soccer.html"><img src="/hack/images/soccer.png"></a>
+            <div class="text">[Easy] Soccer</div>
+        </div>
+        <div class="cell">
             <a href="busqueda.html"><img src="/hack/images/busqueda.png"></a>
             <div class="text">[Easy] Busqueda</div>
         </div>
