Grammar + start of inject

--- a/hack/hacks/index.html
+++ b/hack/hacks/index.html
@@ -105,6 +105,10 @@
 <body>
     <div class="content">
         <div class="cell">
+            <a href="inject.html"><img src="/hack/images/inject.png"></a>
+            <div class="text">[Easy] Inject</div>
+        </div>
+        <div class="cell">
             <a href="metatwo.html"><img src="/hack/images/metatwo.png"></a>
             <div class="text">[Easy] MetaTwo</div>
         </div>
