--- a/hack/hacks/index.html
+++ b/hack/hacks/index.html
@@ -105,6 +105,10 @@
 <body>
     <div class="content">
         <div class="cell">
+            <a href="pc.html"><img src="/hack/images/pc.png"></a>
+            <div class="text">[Easy] PC</div>
+        </div>
+        <div class="cell">
             <a href="pilgrimage.html"><img src="/hack/images/pilgrimage.png"></a>
             <div class="text">[Easy] Pilgrimage</div>
         </div>
