--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <a href="https://www.credential.net/195baba7-9060-471c-8035-accba1286e34"><img src="oswp.png"></a>
         <a href="https://www.credly.com/badges/99caa9af-2043-4e9e-bb4b-941a08a1bb4e/public_url"><img src="sec+.png"></a>
         <a href="https://aspen.eccouncil.org/Verify"><img src="ceh.png"></a>
+        <a href="https://www.credly.com/badges/85ea0607-57a5-4b6e-96fe-67435dcd695a/public_url"><img src="crest_crt.png"></a>
       </div>
 
       
@@ -76,7 +77,7 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <p><a href="https://drive.google.com/file/d/1pBkRp63h_Vd4U4S2SvPF946jzMUVjYu2/view?usp=drive_link"><u>Download PDF</u></a></p>
+        <p><a href="https://drive.google.com/file/d/1pBkRp63h_Vd4U4S2SvPF946jzMUVjYu2/view?usp=sharing"><u>Download PDF</u></a></p>
       </div>
 
       <!-- <embed src="resume.pdf" type="application/pdf" style="min-height:100vh;width:100%"> -->
